# AINewsChatbot

./: .dockerignore  .env  .env.example  .gitignore  AI_UPGRADE_NOTES.md  Dockerfile  NGROK_SETUP.md  PROJECT_COMPLETE.md  Procfile  README.md  RENDER_DEPLOYMENT.md  TROUBLESHOOTING.md  UPGRADE_NOTES.md  app.py  check_environment.py  check_ngrok.py  constraints.txt  crawler.py  crawler_backup.py  crawler_fixed.py  deployment_guide.py  dev_server.py  diagnose_webhook.py  final_test_report.py  get_ngrok_url.py  line_handler.py  main.py  ngrok_manager.py  pyproject.toml  render.yaml  requirements-fallback.txt  requirements.txt  requirements_simple.txt  restart_guide.py  setup.bat  setup.sh  simple_test.py  start_bot.bat  start_ngrok.bat  summarizer.py  (+21 more)
bot/: handlers.py  news.py  summarize.py
tests/: __init__.py  test_crawler.py  test_summarizer.py
