[project]
name = "line-news-bot"
version = "0.1.0"
description = "LINE Chatbot for fetching and summarizing tech news from TechOrange"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "line-bot-sdk>=3.19.0",
    "python-dotenv>=1.1.1",
    "feedparser>=6.0.11",
    "requests>=2.31.0",
]
